whoami/whoami-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: whoami
spec:
  selector:
    app: whoami
#  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
